# ito

./: .clang-format  .clang-tidy  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  conanfile.py  cppcheck.supp  sonar-project.properties
.github/workflows/: build.yml
benchmarks/: CMakeLists.txt  benchmark_base_loop.cpp  benchmark_baseline.cpp  simple_benchmarks.cpp
dev/bench/: data.js
include/ito/: coro.hpp  exceptions.hpp  executor.hpp  loop.hpp  task.hpp  utils.hpp
include/ito/async/: future.hpp
include/ito/details/utils/: error_or_optional.hpp  finally.hpp  overloaded.hpp  raii_coro_handle.hpp  raii_coroutine_handle.hpp  trackable.hpp
tests/: CMakeLists.txt  common.hpp  test_coro.cpp  test_future.cpp  test_loop.cpp  test_task.cpp
